--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "llm-dev-bench": "dist/cli.js"
   },
   "dependencies": {
-    "@anthropic-ai/vertex-sdk": "^0.4.0",
     "@anthropic-ai/sdk": "^0.36.0",
+    "@anthropic-ai/vertex-sdk": "^0.4.0",
     "@google/generative-ai": "^0.21.0",
     "chart.js": "^4.5.1",
     "chartjs-node-canvas": "^5.0.0",
@@ -41,6 +41,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.0",
     "@types/pdfkit": "^0.17.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2"
   }
